src/objects/TagAssignment__c.object
<CustomObject>
    <description>The way to assign tags to Content or to Components</description>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Tag Assignments</relationshipLabel>
        <relationshipName>Tag_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Tag Assignments</relationshipLabel>
        <relationshipName>Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StatusApprovalProcess__c</fullName>
        <label>Status approval process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>StatusApprovalProcess</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TagDescription__c</fullName>
        <formula>Tag__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tag Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tag</label>
        <referenceTo>Tag__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>TagAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tag Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TAS-{000000000}</displayFormat>
        <label>Tag Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tag Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>